# ping-pong-react-fastapi

./: .gitignore  CHANGED.md  README.md  fix-production-git.sh  git-pull-clean.sh  git-pull-safe.sh
backend/: .env.example  MIGRATION_SETUP.md  alembic.ini  pyproject.toml
backend/alembic/: __init__.py  env.py
backend/app/: config.py  main.py
backend/app/controllers/: game_controller.py
backend/app/database/: connection.py  migrations.py
backend/app/models/: __init__.py  game.py
backend/app/services/: game_service.py
backend/app/views/: game_schemas.py
frontend/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  pnpm-lock.yaml  types.ts
frontend/components/: GameEngine.tsx  Leaderboard.tsx  MainMenu.tsx
frontend/services/: gameService.ts  geminiService.ts
